# spice-war-sim

./: pyproject.toml
data/: s3_model_2.json  s3_rag3_vs_hot.json  s3_state_20260228_5pm.json  s3_state_20260304_5pm
docs/: architecture.md  game_mechanics.md  model_generation.md  web_interface_design.md
improvements/: 0001_run_battle_requirements.md  0002_statistical_fairness_tests_design.md  0003_monte_carlo_simulation_design.md  0005_expected_value_targeting_design.md  0007_probability_grid_requirements.md  0010_model_ui_improvements_design.md  0011_web_ui_fixes_and_enhancements_design.md  0011_web_ui_fixes_and_enhancements_requirements.md  0013_mc_targeting_matrix_requirements.md  0014_mc_randomness_enhancements_design.md  0014_mc_randomness_enhancements_requirements.md  0015_expose_mc_randomness_ui_design.md  0015_expose_mc_randomness_ui_requirements.md  0016_web_ui_ux_improvements_requirements.md  0017_web_help_text_design.md  0017_web_help_text_requirements.md  0018_tier_targeting_design.md  0018_tier_targeting_requirements.md  0019_mc_example_run_and_share_link_design.md  0019_mc_example_run_and_share_link_requirements.md
scripts/: build_web.sh  run_monte_carlo.py
src/spice_war/game/: battle.py  events.py  mechanics.py  monte_carlo.py  simulator.py
tests/: test_configurable_model.py  test_custom_outcome.py  test_expected_value_targeting.py  test_mc_randomness.py  test_monte_carlo.py  test_sheets.py  test_statistical_fairness.py  test_validation.py  test_web_bridge.py
web/: index.html
web/css/: style.css
web/js/: app.js  pyodide-loader.js
(+5 files in other folders)
