[project]
name = "spice-war"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "scipy>=1.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: long-running statistical tests"]
